--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
     let model, webcam, ctx, labelContainer, maxPredictions;
     async function init() {
       // モデルのロード
-      model = await tmPose.load(MODEL_URL + "model.json", MODEL_URL + "metadata.json");
+      try {
+        console.log("モデルをロード中...");
+        model = await tmPose.load(MODEL_URL + "model.json", MODEL_URL + "metadata.json");
+        console.log("モデルロード完了");
+      } catch (error) {
+        console.error("モデルのロードに失敗:", error);
+      }
+      
       maxPredictions = model.getTotalClasses();
       // カメラ設定
       const size = 500; // カメラ映像サイズ
@@ -62,6 +69,7 @@
       }
     }
     function sendLineNotify(message) {
+      console.log("LINE Notify送信中...");
       fetch("https://notify-api.line.me/api/notify", {
         method: "POST",
         headers: {
