--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     // LINE Notifyトークン
     const LINE_NOTIFY_TOKEN = "i4mSGPOxKPSsOdA0lJy3lmUWdcpwJrtOMKcO4TYodJ4";
     // Teachable MachineモデルURL
-    const MODEL_URL = "models/pose";
+    const MODEL_URL = "models/pose/";
     let model, webcam, ctx, labelContainer, maxPredictions;
     async function init() {
       // モデルのロード
