--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pose Detection with LINE Notify</title>
+  <title>Teachable Machine Pose Detection</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.20.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8.4/dist/teachablemachine-pose.min.js"></script>
   <script src="script.js" defer></script>
-  <style>
-    body { text-align: center; font-family: Arial, sans-serif; }
-    video { width: 100%; max-width: 500px; }
-  </style>
 </head>
 <body>
-  <h1>Pose Detection with LINE Notify</h1>
+  <h1>Pose Detection with Teachable Machine</h1>
   <video id="webcam" autoplay playsinline></video>
   <p id="result">Waiting for pose...</p>
 </body>
