--- a/index.html
+++ b/index.html
@@ -3,24 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webcam Test</title>
+  <title>Teachable Machine Test</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.20.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8.4/dist/teachablemachine-pose.min.js"></script>
 </head>
 <body>
-  <h1>Webcam Test</h1>
+  <h1>Teachable Machine Test</h1>
   <video id="webcam" autoplay playsinline></video>
+  <p id="result">Waiting...</p>
   <script>
-    async function initWebcam() {
+    let model, webcam;
+    async function init() {
       try {
-        const videoElement = document.getElementById("webcam");
-        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-        videoElement.srcObject = stream;
-        await videoElement.play();
-        console.log("カメラが正常に動作しています。");
+        const modelURL = "./models/pose/model.json";
+        const metadataURL = "./models/pose/metadata.json";
+        console.log("モデルをロード中...");
+        model = await tmPose.load(modelURL, metadataURL);
+        console.log("モデルのロード完了。");
+        webcam = new tmPose.Webcam(500, 500, true); // サイズ: 500x500, 水平反転
+        await webcam.setup();
+        await webcam.play();
+        document.getElementById("webcam").srcObject = webcam.webcam;
+        console.log("カメラの初期化完了。");
+        predict();
       } catch (error) {
-        console.error("カメラの初期化に失敗しました:", error);
+        console.error("初期化エラー:", error);
       }
     }
-    window.onload = initWebcam;
+    async function predict() {
+      try {
+        const { pose, posenetOutput } = await model.estimatePose(webcam.canvas);
+        console.log("ポーズ推論結果:", pose);
+        document.getElementById("result").innerText = "ポーズ推論完了";
+      } catch (error) {
+        console.error("推論エラー:", error);
+      }
+    }
+    window.onload = init;
   </script>
 </body>
 </html>
