初期化できた。2.8.0 -> 2.8.6とscript変更

--- a/index.html
+++ b/index.html
@@ -3,55 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Teachable Machine Test</title>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.20.0"></script>
+  <title>Pose Detection</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.8.6"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8.4/dist/teachablemachine-pose.min.js"></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <h1>Teachable Machine Test</h1>
+  <h1>Pose Detection</h1>
   <video id="webcam" autoplay playsinline></video>
-  <p id="result">Waiting...</p>
-  <script>
-    let model, webcam;
-    async function init() {
-    try {
-      const modelURL = "./models/pose/model.json";
-      const metadataURL = "./models/pose/metadata.json";
-      console.log("モデルをロード中...");
-      model = await tmPose.load(modelURL, metadataURL);
-      console.log("モデルのロード完了。");
-      // カメラ映像を取得
-      const videoElement = document.getElementById("webcam");
-      const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-      videoElement.srcObject = stream; // ここで MediaStream を設定
-      await videoElement.play();
-      console.log("カメラ初期化完了。");
-      loop(videoElement); // 推論ループを開始
-    } catch (error) {
-      console.error("初期化エラー:", error);
-    }
-  }
-  async function loop(videoElement) {
-    try {
-      // 推論処理
-      const { pose, posenetOutput } = await model.estimatePose(videoElement);
-      const prediction = await model.predict(posenetOutput);
-      let highestConfidence = 0;
-      let detectedPose = "";
-      prediction.forEach(p => {
-        if (p.probability > highestConfidence) {
-          highestConfidence = p.probability;
-          detectedPose = p.className;
-        }
-      });
-      document.getElementById("result").innerText = `${detectedPose} (${(highestConfidence * 100).toFixed(2)}%)`;
-      console.log("推論結果:", detectedPose, highestConfidence);
-      requestAnimationFrame(() => loop(videoElement));
-    } catch (error) {
-      console.error("ループ処理中にエラーが発生しました:", error);
-    }
-  }
-    window.onload = init;
-  </script>
+  <p id="result">Waiting for pose...</p>
 </body>
 </html>
