--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pose Detection</title>
+  <title>Pose Detection with LINE Notify</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.8.6"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8.4/dist/teachablemachine-pose.min.js"></script>
   <script src="script.js" defer></script>
 </head>
 <body>
-  <h1>Pose Detection</h1>
+  <h1>Pose Detection with LINE Notify</h1>
   <video id="webcam" autoplay playsinline></video>
   <p id="result">Waiting for pose...</p>
 </body>
